--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div class=" leftp">
                <div class="foodimg"></div>
                <div class="foodimgb"></div> 
+               <div class="foodimgc"></div>
+               <div class="foodimgd"></div> 
+               
                <!-- <div class="foodimgr"></div> -->
                <div class="mylogo text-center align-items-center justify-content-center">
                 <svg
