--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bahari Bhoj</title>
+    <title>Musafir Khana</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.css">
@@ -260,7 +260,7 @@
               <h6>
                 Join us on facebook:
               </h6>
-              <a href="https://m.facebook.com/musafir.khana.food">https://m.facebook.com/musafir.khana.food</a>
+              <a href="https://m.facebook.com/musafir.khana.food" class="text-primary">https://m.facebook.com/musafir.khana.food</a>
               <p>call us on <span class="phone">01948854866</span></p>
             </div>
             <div class="rightp-foot">
