--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
               <h6>
                 Join us on facebook:
               </h6>
-              <a href="https://m.facebook.com/musafir.khana.food" class="text-primary">https://m.facebook.com/musafir.khana.food</a>
-              <p>call us on <span class="phone">01948854866</span></p>
+              <a href="https://m.facebook.com/musafir.khana.food">https://m.facebook.com/musafir.khana.food</a>
+              <p>Call us on <span class="phone">01948854866</span></p>
             </div>
             <div class="rightp-foot">
               <h6>
